--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,7 +21,7 @@ html{
 .header{
     width: 100%;
     height: auto;
-    background-image: url(/public/assets/img/bg-header.png);
+    background-image: url(./public/assets/img/bg-header.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,7 +37,7 @@ html{
 .menu-scroll{
     width: 100%;
     padding: 20px 55px;
-    background-image: url(/public/assets/img/bg-header.png);
+    background-image: url(./public/assets/img/bg-header.png);
     position: fixed;
     top: 0;
     left: 0;
@@ -92,7 +92,7 @@ html{
     top: 0;
     left: 0;
     padding: 10px;
-    background-image: url(/public/assets/img/bg-header.png);
+    background-image: url(./public/assets/img/bg-header.png);
     z-index: 99;
 }
 
@@ -377,7 +377,7 @@ html{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(/public/assets/img/bg-book.png);
+    background-image: url(./public/assets/img/bg-book.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 55px 20px 150px 20px;
@@ -424,7 +424,7 @@ html{
 /* start footer */
 .footer{
     margin: 0 55px 55px 55px;
-    background-image: url(/public/assets/img/bg-footer.png);
+    background-image: url(./public/assets/img/bg-footer.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -608,7 +608,7 @@ html{
         padding: 10px;
     }
     .content-header{
-        background-image: url(/public/assets/img/Banner1.png);
+        background-image: url(./public/assets/img/Banner1.png);
         background-position: bottom;
         background-repeat: no-repeat;
         background-size: cover;
